Add form field validation logic and UI feedback.

--- a/app/src/main/res/values/balance_activity_strings.xml
+++ b/app/src/main/res/values/balance_activity_strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="card_id">Número do cartão</string>
     <string name="birth_date">Data de nascimento</string>
+    <string name="required_field">Campo obrigatório</string>
 
 
 </resources>
