--- a/app/src/main/res/layout/content_current_balance.xml
+++ b/app/src/main/res/layout/content_current_balance.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <android.support.design.widget.TextInputLayout
+            <android.support.design.widget.TextInputLayout android:id="@+id/card_id_wrapper"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <android.support.design.widget.TextInputEditText
@@ -23,7 +23,7 @@
                     android:hint="@string/card_id"/>
             </android.support.design.widget.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
+            <android.support.design.widget.TextInputLayout android:id="@+id/birth_date_wrapper"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <android.support.design.widget.TextInputEditText
