--- a/app/src/main/res/values/balance_activity_strings.xml
+++ b/app/src/main/res/values/balance_activity_strings.xml
@@ -2,6 +2,7 @@
     <string name="card_id">Número do cartão</string>
     <string name="birth_date">Data de nascimento</string>
     <string name="required_field">Campo obrigatório</string>
+    <string name="invalid_value">Valor inválido</string>
 
 
 </resources>
