--- a/app/src/main/res/layout/content_current_balance.xml
+++ b/app/src/main/res/layout/content_current_balance.xml
@@ -38,11 +38,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="GO!"/>
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_margin="@dimen/text_margin"-->
-                <!--android:text="@string/large_text" />-->
+
+            <TextView android:id="@+id/current_balance"
+                android:text="@string/empty_balance_check"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/text_margin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
